--- a/hellp-world.ipynb
+++ b/hellp-world.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM35Tzc2LtJHb7iauxulqI4",
+      "authorship_tag": "ABX9TyMLPClZig59CfvCH1ufrZUU",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,55 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "7WFKaXn8ZokP"
+        "id": "7WFKaXn8ZokP",
+        "outputId": "12803a0f-35d5-40a6-db3a-138b005e81eb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Cloning into 'hello-world'...\n",
+            "remote: Enumerating objects: 35, done.\u001b[K\n",
+            "remote: Counting objects: 100% (35/35), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (27/27), done.\u001b[K\n",
+            "remote: Total 35 (delta 2), reused 0 (delta 0), pack-reused 0\u001b[K\n",
+            "Receiving objects: 100% (35/35), 12.56 KiB | 6.28 MiB/s, done.\n",
+            "Resolving deltas: 100% (2/2), done.\n"
+          ]
+        }
+      ],
+      "source": [
+        "# clone github repository\n",
+        "!git clone https://github.com/askchris/hello-world.git"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "k3t18NWPcGbF"
+      },
+      "execution_count": 3,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_data = pd.read_csv(\"/content/hello-world/datasets/gender_submission.csv\")"
+      ],
+      "metadata": {
+        "id": "DrebTnjib-E1"
+      },
+      "execution_count": 8,
+      "outputs": []
     }
   ]
 }
