--- a/hellp-world.ipynb
+++ b/hellp-world.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN+lqg6UpRqIn+IewN8oYT8",
+      "authorship_tag": "ABX9TyNJTDLZSk2YI8g4GmVU1N7g",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -53,19 +53,10 @@
       ],
       "source": [
         "# clone github repository\n",
-        "!git clone https://github.com/askchris/hello-world.git"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
+        "!git clone https://github.com/askchris/hello-world.git\n",
+        "\n",
         "import pandas as pd"
-      ],
-      "metadata": {
-        "id": "k3t18NWPcGbF"
-      },
-      "execution_count": 3,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -75,11 +66,11 @@
       ],
       "metadata": {
         "id": "DrebTnjib-E1",
-        "outputId": "d37c3f1d-8a00-4e3b-d95a-f09e4696679f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
-        }
+        },
+        "outputId": "d37c3f1d-8a00-4e3b-d95a-f09e4696679f"
       },
       "execution_count": 6,
       "outputs": [
