--- a/hellp-world.ipynb
+++ b/hellp-world.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNJTDLZSk2YI8g4GmVU1N7g",
+      "authorship_tag": "ABX9TyP/ac637ezX3HfrBedbVAib",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7WFKaXn8ZokP",
         "outputId": "62705333-4c1e-401f-d337-58f412552e33",
@@ -52,16 +52,22 @@
         }
       ],
       "source": [
-        "# clone github repository\n",
+        "# Clone github repository\n",
         "!git clone https://github.com/askchris/hello-world.git\n",
         "\n",
-        "import pandas as pd"
+        "import pandas as pd\n",
+        "\n",
+        "print(\"Setup Complete.\")"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "finance_data = pd.read_csv(\"/content/hello-world/datasets/Personal Finance - Raw Data.csv\")\n",
+        "# Load CSV file containing personal finance data from Jan 2023 to Jul 2024\n",
+        "finance_filepath = \"/content/hello-world/datasets/Personal Finance - Raw Data.csv\"\n",
+        "finance_data = pd.read_csv(finance_filepath)\n",
+        "\n",
+        "# View first 5 records of the dataset\n",
         "finance_data.head()"
       ],
       "metadata": {
@@ -70,9 +76,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
-        "outputId": "d37c3f1d-8a00-4e3b-d95a-f09e4696679f"
+        "outputId": "46ab6c41-383f-449d-dbfe-73b76bd9c5d7"
       },
-      "execution_count": 6,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -94,7 +100,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-aaf796f6-1230-4799-85be-260500b5787e\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-10c28684-2e8e-41f4-89de-b6bbbc916a7a\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -191,7 +197,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-aaf796f6-1230-4799-85be-260500b5787e')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-10c28684-2e8e-41f4-89de-b6bbbc916a7a')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -243,12 +249,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-aaf796f6-1230-4799-85be-260500b5787e button.colab-df-convert');\n",
+              "        document.querySelector('#df-10c28684-2e8e-41f4-89de-b6bbbc916a7a button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-aaf796f6-1230-4799-85be-260500b5787e');\n",
+              "        const element = document.querySelector('#df-10c28684-2e8e-41f4-89de-b6bbbc916a7a');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -268,8 +274,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-5e6eea02-4575-44d1-9e2c-504dd4d99c3d\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-5e6eea02-4575-44d1-9e2c-504dd4d99c3d')\"\n",
+              "<div id=\"df-6b9319e3-835f-42d5-ba97-2f172e3def41\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-6b9319e3-835f-42d5-ba97-2f172e3def41')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -388,7 +394,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-5e6eea02-4575-44d1-9e2c-504dd4d99c3d button');\n",
+              "        document.querySelector('#df-6b9319e3-835f-42d5-ba97-2f172e3def41 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -400,12 +406,12 @@
             ],
             "application/vnd.google.colaboratory.intrinsic+json": {
               "type": "dataframe",
-              "variable_name": "train_data",
-              "summary": "{\n  \"name\": \"train_data\",\n  \"rows\": 2148,\n  \"fields\": [\n    {\n      \"column\": \"Application Date\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 921,\n        \"samples\": [\n          \" 2023-11-17\",\n          \"2023-12-12T00:40:57+00:00\",\n          \"14/2/24\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Wallet\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Cash Wallet\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Type\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Expense\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Category name\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 28,\n        \"samples\": [\n          \"Transfers\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Amount\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 852,\n        \"samples\": [\n          \"123.22\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Currency\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"SGD\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Note\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1014,\n        \"samples\": [\n          \"OTHR - GPay- to HENG HIOK SANG via PayNow-Mobile\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Labels\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": null,\n        \"max\": null,\n        \"num_unique_values\": 0,\n        \"samples\": [],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Author\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
+              "variable_name": "finance_data",
+              "summary": "{\n  \"name\": \"finance_data\",\n  \"rows\": 2148,\n  \"fields\": [\n    {\n      \"column\": \"Application Date\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 921,\n        \"samples\": [\n          \" 2023-11-17\",\n          \"2023-12-12T00:40:57+00:00\",\n          \"14/2/24\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Wallet\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Cash Wallet\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Type\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"Expense\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Category name\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 28,\n        \"samples\": [\n          \"Transfers\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Amount\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 852,\n        \"samples\": [\n          \"123.22\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Currency\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [\n          \"SGD\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Note\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1014,\n        \"samples\": [\n          \"OTHR - GPay- to HENG HIOK SANG via PayNow-Mobile\"\n        ],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Labels\",\n      \"properties\": {\n        \"dtype\": \"number\",\n        \"std\": null,\n        \"min\": null,\n        \"max\": null,\n        \"num_unique_values\": 0,\n        \"samples\": [],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    },\n    {\n      \"column\": \"Author\",\n      \"properties\": {\n        \"dtype\": \"category\",\n        \"num_unique_values\": 1,\n        \"samples\": [],\n        \"semantic_type\": \"\",\n        \"description\": \"\"\n      }\n    }\n  ]\n}"
             }
           },
           "metadata": {},
-          "execution_count": 6
+          "execution_count": 9
         }
       ]
     },
