--- a/hellp-world.ipynb
+++ b/hellp-world.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOBKcyoYIb1I2dI0mYz8xRY",
+      "authorship_tag": "ABX9TyOPCl5YMx/BLJ7vSFSq91U+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -56,7 +56,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "7WFKaXn8ZokP",
         "outputId": "4375e79e-4dbb-4dbc-d488-c519615f820a",
@@ -97,7 +97,7 @@
         "id": "AiLxQX_x5Sk5",
         "outputId": "b3eff975-c524-41d0-a1f8-332a22b0eb7d"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +151,7 @@
         },
         "outputId": "95726693-eaaa-4ec2-b188-5d25e30b8e56"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -500,7 +500,7 @@
         "id": "UykEOE_rwDnM",
         "outputId": "da44a34e-37f0-4ca5-edf0-e5e591dccc69"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -537,7 +537,7 @@
         "id": "Cb_7zhaRr_L5",
         "outputId": "cea2a88d-be57-4c3c-8792-2520029170fe"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,7 +654,7 @@
         "id": "_s-5HXARyUKn",
         "outputId": "82f428f2-3a28-4f0a-b7de-972d517c0ce1"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -983,7 +983,7 @@
         "id": "K7fWOjLztJBh",
         "outputId": "db801986-afdc-4a4a-d799-510cafdbc246"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1068,7 +1068,7 @@
         "id": "NjeKyqaK2DpG",
         "outputId": "c517a418-91c0-4843-ca86-eaab92f15b2d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1160,7 +1160,7 @@
         "id": "u6CUMo3m3kzG",
         "outputId": "c9665009-cc84-4434-898e-ab49f4c91f73"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1246,7 +1246,7 @@
         "id": "yFiqpQdK4TAP",
         "outputId": "917268bc-3cd7-4ae1-db46-ac20105b78f5"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1327,7 +1327,7 @@
         "id": "IajtAeaP6AOq",
         "outputId": "012a583e-a5a0-4963-a37c-392bce73f4f8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1408,7 +1408,7 @@
         "id": "kCv1i2O26AA_",
         "outputId": "876f90b4-9d09-4b9d-f5a5-e8ca9db7ebda"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1566,7 +1566,7 @@
         "id": "fkuZNcWe5_1g",
         "outputId": "77cef2ff-cc33-4ed4-f452-e89d6dd95be4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1647,7 +1647,7 @@
         "id": "No713QIE6DSU",
         "outputId": "0f9c4d09-c1ec-4fac-db3a-10c22d602496"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1762,7 +1762,7 @@
         "id": "ku7t54Dv9BNu",
         "outputId": "ee4fd3da-c336-4459-e040-9eed051b3725"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1857,7 +1857,7 @@
         "id": "Ie9PSSUnJNlM",
         "outputId": "8f5336f0-867b-4b2f-b64b-5e31406a8128"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1950,7 +1950,7 @@
         "id": "wWe0RTdzNNlw",
         "outputId": "c45e8a68-6a7e-4cec-9856-ef72278246ac"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2035,7 +2035,7 @@
         "id": "QHLkVL9Ifh5O",
         "outputId": "fca3275f-76b6-4819-ac2d-0557949fec52"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2088,7 +2088,7 @@
         "id": "3eKYF9Udja-1",
         "outputId": "c164a0de-d75f-4aa7-db1c-f613af4e679e"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2123,17 +2123,17 @@
       "source": [
         "# List of conditions\n",
         "conditions = [\n",
-        "      (sales > thr_high) & (profit / sales > thr_margin)\n",
-        "    , (sales > thr_high) & (profit / sales <= thr_margin)\n",
-        "    , (sales > thr_low)\n",
-        "    , (sales <= thr_low)\n",
+        "  (sales > thr_high),\n",
+        "  (sales > thr_high),\n",
+        "  (sales > thr_low),\n",
+        "  (sales <= thr_low)\n",
         "]\n",
         "# List of values to return\n",
-        "choices  = [\n",
-        "      \"A+\"\n",
-        "    , \"A\"\n",
-        "    , \"B\"\n",
-        "    , \"C\"\n",
+        "choices = [\n",
+        "  \"A+\",\n",
+        "  \"A\",\n",
+        "  \"B\",\n",
+        "  \"C\"\n",
         "]\n",
         "# create a new column in the DF based on the conditions\n",
         "df[\"rank1\"] = np.select(conditions, choices, \"ERROR\")"
@@ -2185,7 +2185,7 @@
         "id": "UxijT1tcTZGW",
         "outputId": "0a9954e5-c82f-4fa8-b53a-a1fa6aa0b7db"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
